	PR middle-end/37908 	* optabs.c (expand_sync_operation): Properly handle NAND case 	by calculating ~(t1 & val) instead of (~t1 & val). 	* builtins.c (expand_builtin_sync_operation): Warn for changed 	semantics in NAND builtins. 	* c.opt (Wsync-nand): New warning option.  Describe -Wsync-nand.

* doc/invoke.texi (Warning options): Add Wsync-nand.
	* doc/extend.texi (Atomic Builtins) [__sync_fetch_and_nand]: Correct
	__sync_fetch_and_nand builtin operation in the example.  Add a note
	about changed semantics in GCC 4.4.
	[__sync_nand_and_fetch]: Correct __sync_nand_and_fetch builtin
	operation in the example.  Add a note about changed semantics in
	GCC 4.4.

testsuite/ChangeLog:

	PR middle-end/37908
	* gcc.dg/pr37908.c: New test.
	* gcc.dg/ia64-sync-1.c: Correct __sync_fetch_and_nand and
	__sync_nand_and_fetch results.  Add dg-message to look for the warning
	about changed semantics of NAND builtin.
	(init_si, init_di): Change init value for __sync_fetch_and_nand to -1.
	(test_si, test_di): Change expected result of
	__sync_nand_and_fetch to ~7.
	* gcc.dg/ia64-sync-2.c: Correct __sync_fetch_and_nand and
	__sync_nand_and_fetch results.  Add dg-message to look for the warning
	about changed semantics of NAND builtin.
	(init_noret_si, init_noret_di): Change init value for
	__sync_fetch_and_nand to -1.
	(init_noret_si, init_noret_di): Change expected result of
	__sync_nand_and_fetch to ~7.
	* gcc.dg/sync-2.c: Correct __sync_fetch_and_nand and
	__sync_nand_and_fetch results.  Add dg-message to look for the warning
	about changed semantics of NAND builtin.
	(init_qi, init_qi): Change init value for __sync_fetch_and_nand to -1.
	(init_hi, init_hi): Change expected result of
	__sync_nand_and_fetch to ~7.
	* gcc.dg/sync-3.c: Copy from sync-2.c instead of including
	the c source file.
	* gcc.c-torture/compile/sync-1.c: Add dg-message to look for the
	warning about changed semantics of NAND builtin.
	* gcc.c-torture/compile/sync-2.c: Ditto.
	* gcc.c-torture/compile/sync-3.c: Ditto.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@141942 138bc75d-0d04-0410-961f-82ee72b054a4